--- a/LibraryApp/Views/Shared/_LayoutUsers.cshtml
+++ b/LibraryApp/Views/Shared/_LayoutUsers.cshtml
@@ -29,7 +29,6 @@
 	<div class="row">
 		<div class="col-md-2 sideMenu">
 			<!-- menu -->
-			
 				<div class="col-md-2">
 					<div class="row">
 						<a href="~/Books/Index" class="text-primary">Books</a>
@@ -40,9 +39,9 @@
 				</div>
 
 		</div>
-		<!-- content -->
+		<div class="col-md-10">
 		@RenderBody()
-
+		</div>
 		<footer class="border-top footer text-muted">
 			<div class="container">
 				&copy; 2023 - Library System - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
