--- a/LibraryApp/Views/Authors/Create.cshtml
+++ b/LibraryApp/Views/Authors/Create.cshtml
@@ -36,9 +36,9 @@
                 <span asp-validation-for="Education" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Book" class="control-label"></label>
-                <input asp-for="Book" class="form-control" />
-                <span asp-validation-for="Book" class="text-danger"></span>
+                <label asp-for="Books" class="control-label"></label>
+                <input asp-for="Books" class="form-control" />
+                <span asp-validation-for="Books" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
