--- a/LibraryApp/Views/Authors/Delete.cshtml
+++ b/LibraryApp/Views/Authors/Delete.cshtml
@@ -38,15 +38,15 @@
             @Html.DisplayFor(model => model.Education)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Book)
+            @Html.DisplayNameFor(model => model.Books)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Book)
+            @Html.DisplayFor(model => model.Books)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="AuthorsId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
