--- a/LibraryApp/Views/Authors/Details.cshtml
+++ b/LibraryApp/Views/Authors/Details.cshtml
@@ -37,15 +37,15 @@
             @Html.DisplayFor(model => model.Education)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Book)
+            @Html.DisplayNameFor(model => model.Books)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Book)
+            @Html.DisplayFor(model => model.Books)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.AuthorsId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
 </body>
