--- a/LibraryApp/Views/Authors/Edit.cshtml
+++ b/LibraryApp/Views/Authors/Edit.cshtml
@@ -20,7 +20,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="AuthorsId" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -37,9 +37,9 @@
                 <span asp-validation-for="Education" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Book" class="control-label"></label>
-                <input asp-for="Book" class="form-control" />
-                <span asp-validation-for="Book" class="text-danger"></span>
+                <label asp-for="Books" class="control-label"></label>
+                <input asp-for="Books" class="form-control" />
+                <span asp-validation-for="Books" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
