--- a/LibraryApp/Views/Authors/Index.cshtml
+++ b/LibraryApp/Views/Authors/Index.cshtml
@@ -29,7 +29,7 @@
                 @Html.DisplayNameFor(model => model.Education)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Book)
+                @Html.DisplayNameFor(model => model.Books)
             </th>
             <th></th>
         </tr>
@@ -47,12 +47,12 @@
                 @Html.DisplayFor(modelItem => item.Education)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Book)
+                @Html.DisplayFor(modelItem => item.Books)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.AuthorsId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.AuthorsId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.AuthorsId">Delete</a>
             </td>
         </tr>
 }
