--- a/LibraryApp/Views/Books/Delete.cshtml
+++ b/LibraryApp/Views/Books/Delete.cshtml
@@ -44,10 +44,10 @@
             @Html.DisplayFor(model => model.PublicshDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Author)
+            @Html.DisplayNameFor(model => model.Authors)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Author)
+            @Html.DisplayFor(model => model.Authors)
         </dd>
     </dl>
     
