--- a/LibraryApp/Views/Books/Index.cshtml
+++ b/LibraryApp/Views/Books/Index.cshtml
@@ -32,7 +32,7 @@
                 @Html.DisplayNameFor(model => model.PublicshDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Author)
+                @Html.DisplayNameFor(model => model.Authors)
             </th>
             <th></th>
         </tr>
@@ -53,7 +53,7 @@
                 @Html.DisplayFor(modelItem => item.PublicshDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Author)
+                @Html.DisplayFor(modelItem => item.Authors)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
