--- a/LibraryApp/Views/Books/Index.cshtml
+++ b/LibraryApp/Views/Books/Index.cshtml
@@ -29,7 +29,7 @@
                 @Html.DisplayNameFor(model => model.Synopsis)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PublicshDate)
+                @Html.DisplayNameFor(model => model.PublishDate)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Authors)
@@ -50,7 +50,7 @@
                 @Html.DisplayFor(modelItem => item.Synopsis)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PublicshDate)
+                @Html.DisplayFor(modelItem => item.PublishDate)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Authors)
