--- a/LibraryApp/Views/Books/Create.cshtml
+++ b/LibraryApp/Views/Books/Create.cshtml
@@ -1,63 +1,68 @@
 ﻿@model LibraryApp.Models.Books
 
 @{
-    ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_LayoutUsers.cshtml";
+	ViewData["Title"] = "Create";
+	Layout = "~/Views/Shared/_LayoutUsers.cshtml";
 }
 
 <!DOCTYPE html>
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
+	<meta name="viewport" content="width=device-width" />
+	<title>Create</title>
 </head>
 <body>
 
-<h4>Books</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SubTittle" class="control-label"></label>
-                <input asp-for="SubTittle" class="form-control" />
-                <span asp-validation-for="SubTittle" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Synopsis" class="control-label"></label>
-                <input asp-for="Synopsis" class="form-control" />
-                <span asp-validation-for="Synopsis" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PublicshDate" class="control-label"></label>
-                <input asp-for="PublicshDate" class="form-control" />
-                <span asp-validation-for="PublicshDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Authors" class="control-label"></label>
-                <input asp-for="Authors" class="form-control" />
-                <span asp-validation-for="Authors" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+	<h4>Books</h4>
+	<hr />
+	<div class="row">
+		<div class="col-md-4">
+			<form asp-action="Create">
+				<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+				<div class="form-group">
+					<label asp-for="Title" class="control-label"></label>
+					<input asp-for="Title" class="form-control" />
+					<span asp-validation-for="Title" class="text-danger"></span>
+				</div>
+				<div class="form-group">
+					<label asp-for="SubTittle" class="control-label"></label>
+					<input asp-for="SubTittle" class="form-control" />
+					<span asp-validation-for="SubTittle" class="text-danger"></span>
+				</div>
+				<div class="form-group">
+					<label asp-for="Synopsis" class="control-label"></label>
+					<input asp-for="Synopsis" class="form-control" />
+					<span asp-validation-for="Synopsis" class="text-danger"></span>
+				</div>
+				<div class="form-group">
+					<label asp-for="PublishDate" class="control-label"></label>
+					<input asp-for="PublishDate" class="form-control" />
+					<span asp-validation-for="PublishDate" class="text-danger"></span>
+				</div>
+				<div class="form-group">
+					<label asp-for="Authors" class="control-label"></label>
+					<select class="form-control" name="Authors" id="Authors">
+					
+					</select>
+					<span asp-validation-for="Authors" class="text-danger"></span>
+				</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+				<div class="form-group">
+					<input type="submit" value="Create" class="btn btn-primary" />
+				</div>
+			</form>
+		</div>
+	</div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+	<div>
+		<a asp-action="Index">Back to List</a>
+	</div>
+
+	@section Scripts {
+		@{
+			await Html.RenderPartialAsync("_ValidationScriptsPartial");
+		}
+	}
 </body>
 </html>
