--- a/LibraryApp/Views/Books/Delete.cshtml
+++ b/LibraryApp/Views/Books/Delete.cshtml
@@ -38,10 +38,10 @@
             @Html.DisplayFor(model => model.Synopsis)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PublicshDate)
+            @Html.DisplayNameFor(model => model.PublishDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PublicshDate)
+            @Html.DisplayFor(model => model.PublishDate)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Authors)
