--- a/LibraryApp/Views/Books/Edit.cshtml
+++ b/LibraryApp/Views/Books/Edit.cshtml
@@ -37,9 +37,9 @@
                 <span asp-validation-for="Synopsis" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PublicshDate" class="control-label"></label>
-                <input asp-for="PublicshDate" class="form-control" />
-                <span asp-validation-for="PublicshDate" class="text-danger"></span>
+                <label asp-for="PublishDate" class="control-label"></label>
+                <input asp-for="PublishDate" class="form-control" />
+                <span asp-validation-for="PublishDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Authors" class="control-label"></label>
